--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "license": "MIT",
   "dependencies": {
     "discord.io": "git+https://github.com/Woor/discord.io.git#gateway_v6",
-    "winston": "^2.4.1"
+    "discord.js": "^11.3.2",
+    "lodash": "^4.17.5",
+    "q": "^1.5.1",
+    "the-traveler": "^0.6.1",
+    "winston": "2.4.1"
   }
 }
