--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Destiny Item Tracker Bot",
   "main": "index.js",
   "scripts": {
-    "start": "node worker.js"
+    "start": "node -r dotenv/config worker.js",
+    "start:heroku": "node worker.js"
   },
   "keywords": [
     "destiny2",
@@ -15,6 +16,7 @@
   "dependencies": {
     "discord.io": "git+https://github.com/Woor/discord.io.git#gateway_v6",
     "discord.js": "^11.3.2",
+    "dotenv": "^5.0.1",
     "lodash": "^4.17.5",
     "q": "^1.5.1",
     "the-traveler": "^0.6.1",
